# cpp_web_playground

./: .env.example  .gitignore  CMakeLists.txt  readme.md
apps/autodesk_viewer/include/: auth.hpp  viewer_DBManager.hpp  viewer_ObjectStatus.hpp  viewer_Token.hpp  viewer_app.hpp  viewer_auth.hpp
apps/autodesk_viewer/src/: auth.cpp  viewer_DBManager.cpp  viewer_app.cpp  viewer_auth.cpp
db/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
include/: DBPool.hpp  Server.hpp  ServerConfig.hpp  routes.hpp  utils.hpp
include/db/: DBPool.hpp  FunctionBuilder.hpp  QueryBuilder.hpp
src/: DBPool.cpp  Server.cpp  main.cpp  routes.cpp  server.cpp  utils.cpp
src/db/: DBPool.cpp  FunctionBuilder.cpp  QueryBuilder.cpp
tests/: FunctionBuilder_test.cpp  QueryBuilder_test.cpp
web/: package-lock.json
web/src/: main.ts
web/src/components/: AutodeskViewer.vue
web/src/router/: index.ts
web/src/views/: HomeView.vue  RevitPortfolioPage.vue  TestView.vue
